[package]
name = "nise"
version = "0.1.0"
edition = "2024"
authors = ["Revertron"]
description = "NISE - Nitrokey Simple Encryption. Encrypt files by Nitrokey PIV with ease!"
keywords = ["nitrokey", "piv", "encryption", "signing", "security"]

[dependencies]
anyhow = "1.0.100"
chacha20poly1305 = "0.10"
getopts = "0.2.24"
hex = "0.4.3"
nitrokey-piv = { git = "https://github.com/Revertron/nitrokey-piv", tag="1.0.0" }
p256 = { version = "0.13.2", features = ["ecdh", "arithmetic"] }
p384 = { version = "0.13.1", features = ["ecdh", "arithmetic"] }
rand = "0.8.5"
rpassword = "7.4"
